<resources>
    <string name="app_name">Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note subtitle</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="note_color">Note color</string>
    <string name="type_note_here">Type note here</string>
    <string name="add_image">Add image</string>
    <string name="add_web_link">Add web link</string>
    <string name="enter_web_link">Enter web link</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="color_notes">Color Notes</string>
    <string name="app_version">v 1.1.0</string>
    <string name="developer_name">Developed by Tom Munyiri</string>
    <string name="ok">OK</string>
</resources>