<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAppInfoContainer"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_15sdp"
    android:background="@drawable/background_dialog">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAboutApp"
        app:layout_constraintBottom_toTopOf="@id/textDismissDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_notepad"/>
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ivAppIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/color_notes"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_15sdp"/>
        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ivAppIcon"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/app_version"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/ubuntu_medium"/>
        <TextView
            android:id="@+id/tvDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvAppVersion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAppIcon"
            android:textColor="@color/colorWhite"
            android:paddingTop="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/developer_name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDismissDialog"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAboutApp"
        android:textAlignment="center"
        android:paddingTop="@dimen/_10sdp"
        android:gravity="center" />

</androidx.constraintlayout.widget.ConstraintLayout>